Revision history for Perl extension Math::BigInt::FastCalc.

2007-09-16 0.16 Tels (6892 tests)
  * require Math::BigInt 1.88
  * disable prototypes
  * fix SvIV() vs. SvUV() in _new() (fix bug #29720)
  * it works back to v5.006 (thanx zefram!)

2007-06-30 0.15 Tels (6892 tests)
  * require Math::BigInt 1.87
  * add _nok()
  * bundle and use Module::Install
  * put _new() into the XS

2007-04-17 0.14 Tels (6438 tests)
  * require Math::BigInt 1.83
  * support api_version() 2 by adding _1ex() and _alen()
  * add a few tests

2007-04-09 0.13 Tels (6280 tests)
  * require Math::BigInt 1.82
  * revert the accidentily change to "NV elems" in _len
    (basically, apply the fix that was already in blead to the CPAN release)
  * plug all the leaks in _acmp(), _is_ten() etc. (Thanx Hugo!)

2007-03-03 0.12 Tels (6280 tests)
  * fix bug #25033 It leaks (Thanx M. Schwern!)
  * require Perl 5.6.2, anything older is unsupported and untested

2007-02-02 0.11 Tels (5953 tests)
  * require Math::BigInt 1.79
  * add support for _as_oct() and _from_oct()
  * add _length() to the method list

Older changelog:

0.01  Wed Jun  5 13:03:55 2002
	- original version; created by h2xs 1.21 with options
		-n Math::BigInt::FastCalc -A
2002-08-09 0.02 Tels
  - first working version of XS code of _is_even(), _is_odd()

2002-08-12 0.03 Tels
  - Took Calc.pm and converted it to FastCalc.pm
  - first two functions, _is_odd() and _is_even() in XS
  - testsuite from MBI v1.61
  - extended bigintc.t (also renamed to bigintfc.t)

2002-08-13 0.04 Tels first release
  - added is_zero(), is_one(), _zero(), _one(), _two() and _acmp()
  - more tests in bigintfc.t

  Some general observations:
  * is_*() methods are quite a bit faster than in Calc, but due to the
    overhead in Math::BigInt real programs will get only a bit faster
    (around 2-5%).
  * Comparisation is *much* faster, and even via Math::BigInt improves the
    performance by about factor 9 for large numbers. For smaller numbers (less