@@ -14,9 +14,9 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 6851a4f91df70e4cec07c6060b1620a13337066c CHANGES
+SHA1 2bbbc89dc6ba0e879aa14b84bbb7a9a9c5f5a3c1 CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
-SHA1 98ba0087117ff7e02c207d8312d79fe5f780fafe FastCalc.xs
+SHA1 58e7826e5a3de58e42f6ef4f6df554425de7aa49 FastCalc.xs
 SHA1 3c9ea0ae8e3b33c999932444511522b6662bb8f0 MANIFEST
 SHA1 510b06be3cf9b6aa1e0a0bf66678bcb4c527c748 MANIFEST.SKIP
 SHA1 34d4f327747bb71b862533b4151afad4113b19eb META.yml
@@ -31,7 +31,7 @@ SHA1 dfa433f2f41d990946f1b3d68a29299539f2dea6 inc/Module/Install/Makefile.pm
 SHA1 72cab336b6be5716aae0a1cb6d9add6c98a7a1f5 inc/Module/Install/Metadata.pm
 SHA1 35a62725a7eade0fa617ef2ba4cf2f4d4a69a3fe inc/Module/Install/Win32.pm
 SHA1 19dcc6d1e9f02c56d3f6d184642f4cd68aa371e6 inc/Module/Install/WriteAll.pm
-SHA1 0741cc486c31377a58b1171a10bb3e83138ce9d4 lib/Math/BigInt/FastCalc.pm
+SHA1 7a9438fcb333ae71a7806fcb5ffa96632813abcc lib/Math/BigInt/FastCalc.pm
 SHA1 63986f13125621ec2bdc4330fa0dcb35706b8240 t/bigfltpm.inc
 SHA1 806203223c1908cf0f60b4ca4817387ad03459b8 t/bigfltpm.t
 SHA1 be9be68232b375e96d2538416cbd26653e5469b1 t/bigintfc.t
@@ -47,11 +47,11 @@ SHA1 85872557f2e8ca0006d77f377bea14ad62a0cf6a t/pod_cov.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iQEVAwUBR/eeM3cLPEOTuEwVAQKX0Qf/UEvO7Tavxcw55liCAiFgpMwA17a8Yd20
-+J3+4WmirQnp86kXGd2BOhiC+MTgG0gbIDO7d+yhz0h3dvVN38HokgDPaLioYJkM
-JkVRziq6ENXk9/OH3JNbgXxsMX96/mNV4g0gX7W0sZ+kIrgkCq8/4FgRHf9eNr5s
-BvS10076Acy3t2Qm5lXwwcYmD190M9FnS3O1epjUFWArGnA3XrT0OkOB3n1IjuED
-rR7gXYNCSWYdQkOmvX7EXOQsDMUiaTY6BCMdNdxgI5DwQsUCLIDgIppUkBtFwj3E
-JLIgIHjID4ywtsZ/AC/9bnv95H+83MquMCJB9j34JL1dtJ2H9e6cCw==
-=6CBR
+iQEVAwUBSAHmcHcLPEOTuEwVAQIIXAf+LGlH2WdlUxNcZ5BjfPk3X2tRJggUIo4y
+qBRn9TbDNIer/Dn6X2swg9YXuog4y08I0HW48kGrxeC702hxTQ2HBwalWzmF2iDb
+efCFfxE/707dIHVnF+HgSIH8NQYPv7/iUo10a8pFJdlch1L8srOeDXHhgzv8vjXG
+1B3A+gmXDcdVDVLTGF+Upv0mCUp7fl6hykPFE8eVkUbJ9aMWlCw1jM5yL62GtLzG
+dalPpRze8vYX2VmKZCOeyE5iPjSt/XKn0R47BVxeLsumSu8Gn0+HZzsNUKPl54Ku
+4HSyEk0BhPgS3k1iXlMzbpkcxQml0HdzPOIj8NAZ0o1ram6T9zCdIQ==
+=EjmA
 -----END PGP SIGNATURE-----
